k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: baaas
spec:
  selector:
    app: baaas
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-web-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: baaas
  name: baaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baaas
  template:
    metadata:
      labels:
        app: baaas
    spec:
      containers:
      - image: docker.io/lastcoolnameleft/bad-advice-generator:1
        name: bad-advice-generator
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
            name: http-web-svc
        resources:
          limits:
            cpu: "500m"
            memory: "128Mi"
